fixed overflow

--- a/css/contactstyle.css
+++ b/css/contactstyle.css
@@ -1,8 +1,5 @@
 
-body
-{
-    overflow-x: hidden;
-}
+
 .gmail 
 {
     color: red;
