--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,7 @@
   overflow: hidden;
 }
 
-body 
-{
-  font-family: 'Roboto', sans-serif;
-  overflow-x: hidden;
-}
+
 img {
   max-width: 100%;
 }
